--- a/src/lista_bd/view/Cadastro.form
+++ b/src/lista_bd/view/Cadastro.form
@@ -26,7 +26,7 @@
               <text value="Nome Completo "/>
             </properties>
           </component>
-          <component id="81c14" class="javax.swing.JTextField" binding="tf_name">
+          <component id="81c14" class="javax.swing.JTextField" binding="tfname">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -42,7 +42,7 @@
               <text value="Nome de Usuário"/>
             </properties>
           </component>
-          <component id="6730a" class="javax.swing.JTextField" binding="tf_username">
+          <component id="6730a" class="javax.swing.JTextField" binding="tfusername">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -66,7 +66,7 @@
               <text value="Digite a senha novamente"/>
             </properties>
           </component>
-          <component id="f20b2" class="javax.swing.JPasswordField" binding="tf_pass">
+          <component id="f20b2" class="javax.swing.JPasswordField" binding="tfpass">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -74,7 +74,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="e1e6c" class="javax.swing.JPasswordField" binding="tf_rpass">
+          <component id="e1e6c" class="javax.swing.JPasswordField" binding="tfRpass">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
