--- a/src/lista_bd/view/Login.form
+++ b/src/lista_bd/view/Login.form
@@ -35,7 +35,7 @@
               <text value="Senha"/>
             </properties>
           </component>
-          <component id="207e9" class="javax.swing.JPasswordField" binding="tf_pass">
+          <component id="207e9" class="javax.swing.JPasswordField" binding="tfpass">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -67,7 +67,7 @@
               <text value="Usuário"/>
             </properties>
           </component>
-          <component id="68566" class="javax.swing.JTextField" binding="tf_user">
+          <component id="68566" class="javax.swing.JTextField" binding="tfuser">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -75,7 +75,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="df686" class="javax.swing.JButton" binding="btn_register">
+          <component id="df686" class="javax.swing.JButton" binding="btnRegister">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
